[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/sheets/portraits.png" type="Texture" id=1]
[ext_resource path="res://assets/images/sheets/16x16_misc.png" type="Texture" id=2]
[ext_resource path="res://assets/images/sheets/backdrops.png" type="Texture" id=3]
[ext_resource path="res://src/events/Event.gd" type="Script" id=4]

[node name="Event" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Banner" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 9.0
color = Color( 0.145098, 0.145098, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Banner"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -3.0
margin_right = -1.0
margin_bottom = 2.0
text = "[Event Name]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backfill" type="ColorRect" parent="."]
margin_left = 3.0
margin_top = 12.0
margin_right = 105.0
margin_bottom = 52.0
color = Color( 0.145098, 0.145098, 0.133333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Person" type="Sprite" parent="."]
position = Vector2( 85, 32 )
texture = ExtResource( 1 )
flip_h = true
vframes = 4
hframes = 7
frame = 17

[node name="You" type="Sprite" parent="Person"]
position = Vector2( -62, 0 )
texture = ExtResource( 1 )
vframes = 4
hframes = 7

[node name="Scene" type="Sprite" parent="."]
position = Vector2( 14, 12 )
texture = ExtResource( 3 )
centered = false
vframes = 6
hframes = 21

[node name="Item" type="Sprite" parent="."]
modulate = Color( 0.792157, 0.780392, 0.721569, 1 )
position = Vector2( 54, 34 )
texture = ExtResource( 2 )
vframes = 16
hframes = 16
frame = 56

[node name="Desc" type="RichTextLabel" parent="."]
margin_left = 3.0
margin_top = 53.0
margin_right = 110.0
margin_bottom = 135.0
bbcode_enabled = true
bbcode_text = "Testing"
text = "Testing"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Desc"]

[node name="Options" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -60.0
margin_right = -2.0
margin_bottom = -2.0
custom_constants/separation = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice1" type="Button" parent="Options"]
margin_right = 104.0
margin_bottom = 13.0
rect_min_size = Vector2( 0, 13 )
text = "Take the black orb."

[node name="Choice2" type="Button" parent="Options"]
margin_top = 15.0
margin_right = 104.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 13 )
text = "Take the black orb."

[node name="Choice3" type="Button" parent="Options"]
margin_top = 30.0
margin_right = 104.0
margin_bottom = 43.0
rect_min_size = Vector2( 0, 13 )
text = "Take the black orb."

[node name="Choice4" type="Button" parent="Options"]
margin_top = 45.0
margin_right = 104.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 13 )
text = "Take the black orb."
[connection signal="pressed" from="Options/Choice1" to="." method="_on_Choice1_pressed"]
[connection signal="pressed" from="Options/Choice2" to="." method="_on_Choice2_pressed"]
[connection signal="pressed" from="Options/Choice3" to="." method="_on_Choice3_pressed"]
[connection signal="pressed" from="Options/Choice4" to="." method="_on_Choice4_pressed"]
